--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <queries>
 
@@ -14,6 +19,7 @@
         </intent>
         <intent>
             <action android:name="android.intent.action.GET_CONTENT" />
+
             <data android:mimeType="image/*" />
         </intent>
     </queries>
@@ -24,8 +30,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MLSeriesDemonstrator">
-        <activity android:name="com.example.capsy.MainActivity" android:exported="true" android:screenOrientation="userPortrait">
+        android:theme="@style/Theme.Capsy">
+        <activity
+            android:name=".VideoCallActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VideoCall"
+            android:exported="false" />
+        <activity
+            android:name=".Splashscreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,45 +47,48 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.capsy.image.ImageClassificationActivity"
-            android:screenOrientation="userPortrait" />
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.example.capsy.image.FlowerIdentificationActivity"
-            android:screenOrientation="userPortrait" />
+            android:name=".image.ImageClassificationActivity"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.example.capsy.object.ObjectDetectionActivity"
-            android:screenOrientation="userPortrait" />
+            android:name=".image.FlowerIdentificationActivity"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.example.capsy.object.FaceDetectionActivity"
-            android:screenOrientation="userPortrait" />
+            android:name=".object.ObjectDetectionActivity"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.example.capsy.audio.AudioClassificationActivity"
-            android:screenOrientation="userPortrait" />
+            android:name=".object.FaceDetectionActivity"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.example.capsy.audio.BirdSoundDetectorActivity"
-            android:screenOrientation="userPortrait" />
-        <activity android:name="com.example.capsy.text.SpamTextDetectionActivity"
-            android:screenOrientation="userPortrait" />
-
-        <activity android:name="com.example.capsy.object.DriverDrowsinessDetectionActivity"
-            android:screenOrientation="userPortrait" />
-
-        <activity android:name="com.example.capsy.object.PoseDetectionActivity"
-            android:screenOrientation="userPortrait" />
-
-        <activity android:name="com.example.capsy.object.VisitorAnalysisActivity"
-            android:screenOrientation="userPortrait" />
-
-        <activity android:name="com.example.capsy.object.FaceRecognitionActivity"
-            android:screenOrientation="userPortrait" />
-
-        <activity android:name="com.example.capsy.object.ObscureFaceActivity"
-            android:screenOrientation="userPortrait" />
-
-        <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
+            android:name=".audio.AudioClassificationActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".audio.BirdSoundDetectorActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".text.SpamTextDetectionActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".object.DriverDrowsinessDetectionActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".object.PoseDetectionActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".object.VisitorAnalysisActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".object.FaceRecognitionActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".object.ObscureFaceActivity"
+            android:screenOrientation="fullSensor" /> <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.iago.fileprovider1"
+            android:authorities="com.iago.fileprovidercapsy"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
